deploy/k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: nasscom
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
